--- a/css/screen.css
+++ b/css/screen.css
@@ -189,6 +189,19 @@ a:focus {
     }
 }
 
+/*
+    Objects: Container
+    ---
+    Creates a horizontal container that sets de global max-width
+*/
+
+.o-container {
+    width: 100%;
+    max-width: 90em;
+    margin: 0 auto;
+}
+
+
 
 /*------------------------------------*\
   #COMPONENTS
