Added layout alignments

--- a/css/screen.css
+++ b/css/screen.css
@@ -253,41 +253,75 @@ a:focus {
 
 /* reverse horizontal row modifier */
 
-.o-layout--row-reverse {}
+.o-layout--row-reverse {
+    flex-direction: row-reverse;
+}
 
 /* Horizontal alignment modifiers*/
 
-.o-layout--justify-start {}
+.o-layout--justify-start {
+    justify-content: flex-start;
+}
 
-.o-layout--justify-end {}
+.o-layout--justify-end {
+    justify-content: flex-end;
+}
 
-.o-layout--justify-center {}
+.o-layout--justify-center {
+    justify-content: center;
+}
 
-.o-layout--justify-space-around {}
+.o-layout--justify-space-evenly {
+    justify-content: space-evenly;
+}
 
-.o-layout--justify-space-between {}
+.o-layout--justify-space-around {
+    justify-content: space-around;
+}
+
+.o-layout--justify-space-between {
+    justify-content: space-between;
+}
 
 /* Vertical item alignment modifiers */
 
-.o-layout--align-start {}
+.o-layout--align-start {
+    align-items: flex-start;
+}
 
-.o-layout--align-end {}
+.o-layout--align-end {
+    align-items: flex-end;
+}
 
-.o-layout--align-center {}
+.o-layout--align-center {
+    align-items: center;
+}
 
-.o-layout--align-baseline {}
+.o-layout--align-baseline {
+    align-items: baseline;
+}
 
 /* Vertical content alignment modifiers. Only work if there is one than one flex item */
 
-.o-layout--align-content-start {}
+.o-layout--align-content-start {
+    align-content: flex-start;
+}
 
-.o-layout--align-content-end {}
+.o-layout--align-content-end {
+    align-content: flex-end;
+}
 
-.o-layout--align-content-center {}
+.o-layout--align-content-center {
+    align-content: center;
+}
 
-.o-layout--align-content-space-around {}
+.o-layout--align-content-space-around {
+    align-content: space-around;
+}
 
-.o-layout--align-content-space-between {}
+.o-layout--align-content-space-between {
+    align-content: space-between;
+}
 
 
 /*------------------------------------*\
@@ -345,7 +379,9 @@ a:focus {
     Will be mostly used on o-layout__item
 */
 
-.u-width-auto {}
+.u-width-auto {
+    width: auto;
+}
 
 .u-1-of-2 {
     width: calc(100% / 2);
@@ -392,19 +428,187 @@ a:focus {
 }
 
 @media (min-width: 576px) {
-    .u-1-of-2-bp1 {}
+    .u-1-of-2-bp1 {
+        width: calc(100% / 2);
+    }
+
+    .u-1-of-3-bp1 {
+        width: calc(100% / 3);
+    }
+
+    .u-2-of-3-bp1 {
+        width: calc(100% / 3 * 2);
+    }
+
+    .u-1-of-4-bp1 {
+        width: calc(100% / 4);
+    }
+
+    .u-3-of-4-bp1 {
+        width: calc(100% / 4 * 3);
+    }
+
+    .u-1-of-5-bp1 {
+        width: calc(100% / 5)
+    }
+
+    .u-2-of-5-bp1 {
+        width: calc(100% / 5 * 2)
+    }
+
+    .u-3-of-5-bp1 {
+        width: calc(100% / 5 * 3)
+    }
+
+    .u-4-of-5-bp1 {
+        width: calc(100% / 5 * 4)
+    }
+
+    .u-1-of-6-bp1 {
+        width: calc(100% / 6)
+    }
+
+    .u-5-of-6-bp1 {
+        width: calc(100% / 6 * 5)
+    }
 }
 
 @media (min-width: 768px) {
-    .u-1-of-2-bp2 {}
+    .u-1-of-2-bp2 {
+        width: calc(100% / 2);
+    }
+
+    .u-1-of-3-bp2 {
+        width: calc(100% / 3);
+    }
+
+    .u-2-of-3-bp2 {
+        width: calc(100% / 3 * 2);
+    }
+
+    .u-1-of-4-bp2 {
+        width: calc(100% / 4);
+    }
+
+    .u-3-of-4-bp2 {
+        width: calc(100% / 4 * 3);
+    }
+
+    .u-1-of-5-bp2 {
+        width: calc(100% / 5)
+    }
+
+    .u-2-of-5-bp2 {
+        width: calc(100% / 5 * 2)
+    }
+
+    .u-3-of-5-bp2 {
+        width: calc(100% / 5 * 3)
+    }
+
+    .u-4-of-5-bp2 {
+        width: calc(100% / 5 * 4)
+    }
+
+    .u-1-of-6-bp2 {
+        width: calc(100% / 6)
+    }
+
+    .u-5-of-6-bp2 {
+        width: calc(100% / 6 * 5)
+    }
 }
 
 @media (min-width: 992px) {
-    .u-1-of-2-bp3 {}
+    .u-1-of-2-bp3 {
+        width: calc(100% / 2);
+    }
+
+    .u-1-of-3-bp3 {
+        width: calc(100% / 3);
+    }
+
+    .u-2-of-3-bp3 {
+        width: calc(100% / 3 * 2);
+    }
+
+    .u-1-of-4-bp3 {
+        width: calc(100% / 4);
+    }
+
+    .u-3-of-4-bp3 {
+        width: calc(100% / 4 * 3);
+    }
+
+    .u-1-of-5-bp3 {
+        width: calc(100% / 5)
+    }
+
+    .u-2-of-5-bp3 {
+        width: calc(100% / 5 * 2)
+    }
+
+    .u-3-of-5-bp3 {
+        width: calc(100% / 5 * 3)
+    }
+
+    .u-4-of-5-bp3 {
+        width: calc(100% / 5 * 4)
+    }
+
+    .u-1-of-6-bp3 {
+        width: calc(100% / 6)
+    }
+
+    .u-5-of-6-bp3 {
+        width: calc(100% / 6 * 5)
+    }
 }
 
 @media (min-width: 1200px) {
-    .u-1-of-2-bp4 {}
+    .u-1-of-2-bp4 {
+        width: calc(100% / 2);
+    }
+
+    .u-1-of-3-bp4 {
+        width: calc(100% / 3);
+    }
+
+    .u-2-of-3-bp4 {
+        width: calc(100% / 3 * 2);
+    }
+
+    .u-1-of-4-bp4 {
+        width: calc(100% / 4);
+    }
+
+    .u-3-of-4-bp4 {
+        width: calc(100% / 4 * 3);
+    }
+
+    .u-1-of-5-bp4 {
+        width: calc(100% / 5)
+    }
+
+    .u-2-of-5-bp4 {
+        width: calc(100% / 5 * 2)
+    }
+
+    .u-3-of-5-bp4 {
+        width: calc(100% / 5 * 3)
+    }
+
+    .u-4-of-5-bp4 {
+        width: calc(100% / 5 * 4)
+    }
+
+    .u-1-of-6-bp4 {
+        width: calc(100% / 6)
+    }
+
+    .u-5-of-6-bp4 {
+        width: calc(100% / 6 * 5)
+    }
 }
 
 
